--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -98,26 +98,26 @@
 
 
         	<!-- Begin text carousel intro section -->
-			<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(img/slider-bg.jpg);">
+			<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(main.jpg);">
 
 				<div class="container">
 					<div class="caption text-center text-white" data-stellar-ratio="0.7">
 
 						<div id="owl-intro-text" class="owl-carousel">
 							<div class="item">
-								<h1>S.T.A.T.I</h1>
+								<h1>S.U.A.T.I</h1>
 								<p>Step Up And Take Initiative</p>
                                 <div class="extra-space-l"></div>
 								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
 							</div>
 							<div class="item">
-								<h1>Join with us</h1>
+								<h1>Join us</h1>
 								<p>To the greatest Journey</p>
 								<div class="extra-space-l"></div>
 								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
 							</div>
 							<div class="item">
-								<h1>I'm Unika</h1>
+								<h1>Sign Up</h1>
 								<p>One Page Responsive Theme</p>
 								<div class="extra-space-l"></div>
 								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
@@ -267,108 +267,6 @@
                 <!-- End Our Skill -->
           </section>
           <!-- End about section -->
-
-
-
-
-          <!-- Begin cta -->
-          <section id="cta-section">
-          	<div class="cta">
-            	<div class="container">
-                	<div class="row">
-
-                    	<div class="col-md-9">
-                        	<h1>Download Our Pdf</h1>
-                            <p>Inspired by nature, follow technology, appreciate the classics. You can build modern & professional websites with Unika. The possibilities are just endless.</p>
-                        </div>
-
-                        <div class="col-md-3">
-                        	<div class="cta-btn wow bounceInRight" data-wow-delay="0.4s">
-                        <a class="btn btn-default btn-lg" href="http://www.imransdesign.com/" target="_blank" role="button">Download</a>
-                        	</div>
-                        </div>
-
-                    </div> <!-- /.row -->
-                </div> <!-- /.container -->
-            </div>
-          </section>
-          <!-- End cta -->
-
-
-
-
-            <!-- Begin Services -->
-            <section id="services-section" class="page text-center">
-                <!-- Begin page header-->
-                <div class="page-header-wrapper">
-                    <div class="container">
-                        <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                            <h2>Services</h2>
-                            <div class="devider"></div>
-                            <p class="subtitle">what we really know how</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- End page header-->
-
-                <!-- Begin roatet box-2 -->
-                <div class="rotate-box-2-wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6">
-                                <a href="#" class="rotate-box-2 square-icon text-center wow zoomIn" data-wow-delay="0">
-                                    <span class="rotate-box-icon"><i class="fa fa-mobile"></i></span>
-                                    <div class="rotate-box-info">
-                                        <h4>App Development</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6">
-                                <a href="#" class="rotate-box-2 square-icon text-center wow zoomIn" data-wow-delay="0.2s">
-                                    <span class="rotate-box-icon"><i class="fa fa-pie-chart"></i></span>
-                                    <div class="rotate-box-info">
-                                        <h4>Ui Design</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6">
-                                <a href="#" class="rotate-box-2 square-icon text-center wow zoomIn" data-wow-delay="0.4s">
-                                    <span class="rotate-box-icon"><i class="fa fa-cloud"></i></span>
-                                    <div class="rotate-box-info">
-                                        <h4>Cloud Hosting</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6">
-                                <a href="#" class="rotate-box-2 square-icon text-center wow zoomIn" data-wow-delay="0.6s">
-                                    <span class="rotate-box-icon"><i class="fa fa-pencil"></i></span>
-                                    <div class="rotate-box-info">
-                                        <h4>Coding Pen</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                        </div> <!-- /.row -->
-                    </div> <!-- /.container -->
-
-                    <div class="container">
-                        <!-- Cta Button -->
-                        <div class="extra-space-l"></div>
-                        <div class="text-center">
-                    		<a class="btn btn-default btn-lg-xl" href="http://www.imransdesign.com/" target="_blank" role="button">Large Button</a>
-                        </div>
-                    </div> <!-- /.container -->
-                </div>
-                <!-- End rotate-box-2 -->
-            </section>
-            <!-- End Services -->
 
 
 
