--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -155,8 +155,8 @@
                                 <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0">
                                     <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                     <div class="rotate-box-info">
-                                        <h4>Who We Are?</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
+                                        <h4>The Problem</h4>
+                                        <p>We discovered tha it was difficult to find certain volunteer opportunities in New York City becuase they remained unreported, so we wanted build a website that would make it easier for people to discover the opportunitites available aorund the city.</p>
                                     </div>
                                 </a>
                             </div>
@@ -165,23 +165,23 @@
                                 <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.2s">
                                     <span class="rotate-box-icon"><i class="fa fa-diamond"></i></span>
                                     <div class="rotate-box-info">
-                                        <h4>What We Do?</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
+                                        <h4>The Solution</h4>
+                                        <p>To solve this issue, we want to allow non-profit organizations to be able to add their requests for volunteers or donations to help a cause. We also wanted to allow volunteers who sign in to track their community service hours. This will be especially beneficial to highschool and college students who are required to do community service for certain programs.</p>
                                     </div>
                                 </a>
                             </div>
-
+<!-- 
                             <div class="col-md-3 col-sm-6">
                                 <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.4s">
                                     <span class="rotate-box-icon"><i class="fa fa-heart"></i></span>
                                     <div class="rotate-box-info">
-                                        <h4>Why We Do It?</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
+                                        <h4>Techinal Hurdle</h4>
+                                        <p>Who knows man, fuck. Getting dem sign ups and sign ins to work with dahjango</p>
                                     </div>
                                 </a>
                             </div>
-
-                            <div class="col-md-3 col-sm-6">
+ -->
+<!--                             <div class="col-md-3 col-sm-6">
                                 <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
                                     <span class="rotate-box-icon"><i class="fa fa-clock-o"></i></span>
                                     <div class="rotate-box-info">
@@ -189,20 +189,135 @@
                                         <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
                                     </div>
                                 </a>
-                            </div>
+                            </div> -->
 
                         </div> <!-- /.row -->
                     </div> <!-- /.container -->
-                </div>
+                </div> -->
                 <!-- End rotate box-1 -->
 
                 <div class="extra-space-l"></div>
 
                 <!-- Begin page header-->
-             
+                <div class="page-header-wrapper">
+                    <div class="container">
+                        <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
+                            <h4>Our Skills</h4>
+                        </div>
+                    </div>
+                </div>
                 <!-- End page header-->
+
+                <!-- Begin Our Skills -->
+                <div class="our-skills">
+                	<div class="container">
+                    	<div class="row">
+
+                        	<div class="col-sm-6">
+                                <div class="skill-bar wow slideInLeft" data-wow-delay="0.2s">
+                                    <div class="progress-lebel">
+                                        <h6>Photoshop & Illustrator</h6>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div class="skill-bar wow slideInRight" data-wow-delay="0.2s">
+                                    <div class="progress-lebel">
+                                        <h6>WordPress</h6>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div class="skill-bar wow slideInLeft" data-wow-delay="0.4s">
+                                    <div class="progress-lebel">
+                                        <h6>Html & Css</h6>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div class="skill-bar wow slideInRight" data-wow-delay="0.4s">
+                                    <div class="progress-lebel">
+                                        <h6>Javascript</h6>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div> <!-- /.row -->
+                    </div> <!-- /.container -->
+                </div>
+                <!-- End Our Skill -->
           </section>
           <!-- End about section -->
+
+
+
+
+            <!-- Begin testimonials -->
+            <section id="testimonial-section">
+                <div id="testimonial-trigger" class="testimonial text-white parallax" data-stellar-background-ratio="0.5" style="background-image: url(img/testimonial-bg.jpg);">
+                    <div class="cover"></div>
+                    <!-- Begin page header-->
+                    <div class="page-header-wrapper">
+                        <div class="container">
+                            <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
+                                <h2>Reviews</h2>
+                                <div class="devider"></div>
+                                <p class="subtitle">What people say about us</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End page header-->
+                    <div class="container">
+                        <div class="testimonial-inner center-block text-center">
+                            <div id="owl-testimonial" class="owl-carousel">
+                                <div class="item">
+                                    <blockquote>
+                                        <p>"This was my first experience with that team and outperformed my expectation! They know there stuff and I highly recommend them! A+++".</p>
+                                        <footer><cite title="Source Title">Daryl Hodgeman</cite></footer>
+                                    </blockquote>
+                                </div>
+                                <div class="item">
+                                    <blockquote>
+                                        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                        tempor incididunt ut labore et dolore magna aliqua."</p>
+                                        <footer><cite title="Source Title">John Doe</cite></footer>
+                                    </blockquote>
+                                </div>
+                                <div class="item">
+                                    <blockquote>
+                                        <p>"Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                        proident, sunt in culpa qui officia deserunt mollit".</p>
+                                        <footer><cite title="Source Title">John Doe</cite></footer>
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- End testimonials -->
+
 
 
 
