--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -355,8 +355,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p1.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Skull Awesome</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Animal Care</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -364,8 +364,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p2.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Photo Frame</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Elderly Services</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -373,8 +373,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p3.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Hand Shots</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Hosiptal Services</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -382,8 +382,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p4.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Night Abstract</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">DONATE!</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -391,8 +391,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img//portfolio/p5.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Joy of Independence</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Homeless Shelters</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -400,8 +400,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p6.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Night Crawlers</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Food Drives</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -409,8 +409,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p7.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Last Motel</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Museums/Zoos/Aquariums/Parks</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -418,8 +418,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p8.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Dirk Road</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Day Cares</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -427,8 +427,8 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p9.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Old is Gold</a>
-                                                        <span>Subtitle</span>
+                                                        <a href="#">Blood Drives</a>
+                                                        <span></span>
                                                     </div>
                                                 </div>
                                             </div>
