--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -353,7 +353,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-4 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p1.jpg" alt="title"/>
+                                                    <img src="dog.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Animal Care</a>
                                                         <span></span>
