--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -331,9 +331,9 @@
                                 <div class="page-header-wrapper">
                                     <div class="container">
                                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                                            <h2>Our Works</h2>
+                                            <h2>Volunteer Opportunities</h2>
                                             <div class="devider"></div>
-                                            <p class="subtitle">What we are proud of</p>
+                                            <p class="subtitle">Categories</p>
                                         </div>
                                     </div>
                                 </div>
@@ -353,7 +353,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-4 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                    <img src="dog.jpg" alt="title"/>
+                                                   <img src="dog.jpg" alt="title" height="600" width="600"/>
                                                     <div>
                                                         <a href="#">Animal Care</a>
                                                         <span></span>
