--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -284,7 +284,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-4 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                   <img src="dog.jpg" alt="title" height="220" width="220"/>
+                                                   <img src="dog.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Animal Care</a>
                                                         <span></span>
