--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -166,7 +166,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>The Problem</h4>
-                                        <p>We discovered that it is difficult to find a collective list of specific volunteer opportunities in New York City because they remained unreported.</p>
+                                        <p>We discovered that find a collective list of specific volunteer opportunities in New York City is difficult because many opportunities remain unreported.</p>
                                     </div>
                                 </a>
                             </div>
@@ -176,7 +176,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>Our Solution</h4>
-                                        <p>This easy-to-use website allows non-profit organizations to add volunteer and donation opportunities for a cause. </p>
+                                        <p>This easy-to-use website allows non-profit organizations to add volunteer and donation opportunities for a cause. Volunteers who sign in may also log their service hours.</p>
                                     </div>
                                 </a>
                             </div>
@@ -186,8 +186,8 @@
                                 <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
                                     <span class="rotate-box-icon"><i class="fa fa-diamond"></i></span>
                                     <div class="rotate-box-info">
-                                        <h4></h4>
-                                        <p>On this easy-to-use site, non-profit organizations can add their requests for volunteers or donations to help a cause. Volunteers who sign in can also track their hours of service.</p>
+                                        <h4>Why</h4>
+                                        <p>As fellow high-school students, this website can be incredibly useful for other students looking to give back to their community.</p>
                                     </div>
                                 </a>
 			    </div>
