--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -253,7 +253,7 @@
                                                 <div class="portfolio_single_content">
                                                     <img src="img/portfolio/p3.jpg" alt="title"/>
                                                     <div>
-                                                        <a href="#">Hosiptal Services</a>
+                                                        <a href="#">Hospital Services</a>
                                                         <span></span>
                                                     </div>
                                                 </div>
@@ -704,129 +704,6 @@
             </section>
             <!-- End social section -->
 
-
-
-
-            <!-- Begin contact section -->
-			<section id="contact-section" class="page text-white parallax" data-stellar-background-ratio="0.5" style="background-image: url(img/map-bg.jpg);">
-            <div class="cover"></div>
-
-                 <!-- Begin page header-->
-                <div class="page-header-wrapper">
-                    <div class="container">
-                        <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                            <h2>Contacts</h2>
-                            <div class="devider"></div>
-                            <p class="subtitle">All to contact us</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- End page header-->
-
-                <div class="contact wow bounceInRight" data-wow-delay="0.4s">
-                    <div class="container">
-                    	<div class="row">
-
-                            <div class="col-sm-6">
-                                <div class="contact-info">
-                                    <h4>Our Address</h4>
-                                    <ul class="contact-address">
-			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 100 Limpbiscayne Blvd. (North) 17st Floor ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New World Tower New York ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New York, USA, 33148</li>
-			                            <li><i class="fa fa-phone"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-print"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-envelope"></i> info@yourdomain.com</li>
-			                            <li><i class="fa fa-skype"></i> Unika-Design</li>
-			                        </ul>
-                                </div>
-                            </div>
-
-                        	<div class="col-sm-6">
-                                <div class="contact-form">
-                                	<h4>Write to us</h4>
-                                    <form role="form">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="Your Name" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="email" class="form-control input-lg" placeholder="E-mail" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="Subject" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <textarea class="form-control input-lg" rows="5" placeholder="Message" required></textarea>
-                                        </div>
-                                        <button type="submit" class="btn wow bounceInRight" data-wow-delay="0.8s">Send</button>
-                                    </form>
-                                </div>
-                            </div>
-
-                        </div> <!-- /.row -->
-                    </div> <!-- /.container -->
-                </div>
-            </section>
-            <!-- End contact section -->
-
-
-
-
-            <!-- Begin footer -->
-            <footer class="text-off-white">
-
-                <div class="footer-top">
-                	<div class="container">
-                    	<div class="row wow bounceInLeft" data-wow-delay="0.4s">
-
-                            <div class="col-sm-6 col-md-4">
-                            	<h4>Useful Links</h4>
-                                <ul class="imp-links">
-                                	<li><a href="">About</a></li>
-                                	<li><a href="">Services</a></li>
-                                	<li><a href="">Press</a></li>
-                                	<li><a href="">Copyright</a></li>
-                                	<li><a href="">Advertise</a></li>
-                                	<li><a href="">Legal</a></li>
-                                </ul>
-                            </div>
-
-                        	<div class="col-sm-6 col-md-4">
-                                <h4>Subscribe</h4>
-                            	<div id="footer_signup">
-                                    <div id="email">
-                                        <form id="subscribe" method="POST">
-                                            <input type="text" placeholder="Enter email address" name="email" id="address" data-validate="validate(required, email)"/>
-                                            <button type="submit">Submit</button>
-                                            <span id="result" class="section-description"></span>
-                                        </form>
-                                    </div>
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-
-                            <div class="col-sm-12 col-md-4">
-                                <h4>Recent Tweets</h4>
-                                <div class="single-tweet">
-                                    <div class="tweet-content"><span>@Unika</span> Excepteur sint occaecat cupidatat non proident</div>
-                                    <div class="tweet-date">1 Hour ago</div>
-                                </div>
-                                <div class="single-tweet">
-                                    <div class="tweet-content"><span>@Unika</span> Excepteur sint occaecat cupidatat non proident uku shumaru</div>
-                                    <div class="tweet-date">1 Hour ago</div>
-                                </div>
-                            </div>
-
-                        </div> <!-- /.row -->
-                    </div> <!-- /.container -->
-                </div>
-
-                <div class="footer">
-                    <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                        <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova" class="theme-author">Veronika Poljakova</a> &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a></p>
-                    </div>
-                </div>
-
-            </footer>
-            <!-- End footer -->
 
             <a href="#" class="scrolltotop"><i class="fa fa-arrow-up"></i></a> <!-- Scroll to top button -->
 
