--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -80,10 +80,8 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="body">Home</a></li>
                             <li><a class="page-scroll" href="#about-section">About</a></li>
-                            <li><a class="page-scroll" href="#services-section">Services</a></li>
-                            <li><a class="page-scroll" href="#portfolio-section">Works</a></li>
+                            <li><a class="page-scroll" href="#portfolio-section">Volunteer</a></li>
                             <li><a class="page-scroll" href="#team-section">Team</a></li>
-                            <li><a class="page-scroll" href="#prices-section">Prices</a></li>
                             <li><a class="page-scroll" href="#contact-section">Contact</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
