--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -230,7 +230,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-4 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                   <img src="dog.jpg" alt="title"/>
+                                                   <img src="tf.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Animal Care</a>
                                                         <span></span>
@@ -239,7 +239,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p2.jpg" alt="title"/>
+                                                    <img src="rich.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Elderly Services</a>
                                                         <span></span>
@@ -248,7 +248,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p3.jpg" alt="title"/>
+                                                    <img src="kat.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Hospital Services</a>
                                                         <span></span>
@@ -257,7 +257,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 webDesign websites">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p4.jpg" alt="title"/>
+                                                    <img src="ear.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">DONATE!</a>
                                                         <span></span>
@@ -266,7 +266,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 appsDevelopment websites">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img//portfolio/p5.jpg" alt="title"/>
+                                                    <img src="soup.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Homeless Shelters</a>
                                                         <span></span>
@@ -275,7 +275,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p6.jpg" alt="title"/>
+                                                    <img src="foodrive.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Food Drives</a>
                                                         <span></span>
@@ -284,7 +284,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p7.jpg" alt="title"/>
+                                                    <img src="green-park.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Museums/Zoos/Aquariums/Parks</a>
                                                         <span></span>
@@ -293,7 +293,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p8.jpg" alt="title"/>
+                                                    <img src="kids.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Day Cares</a>
                                                         <span></span>
@@ -302,7 +302,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 websites">
                                                 <div class="portfolio_single_content">
-                                                    <img src="img/portfolio/p9.jpg" alt="title"/>
+                                                    <img src="blood.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Blood Drives</a>
                                                         <span></span>
