--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -275,7 +275,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <img src="foodrive.jpg" alt="title"/>
+                                                    <img src="remyma.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Food Drives</a>
                                                         <span></span>
