--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -105,19 +105,19 @@
 								<h1>S.U.A.T.I</h1>
 								<p>Step Up And Take Initiative</p>
                                 <div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
+								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">Sign Up!</a>
 							</div>
 							<div class="item">
 								<h1>Join us</h1>
 								<p>To the greatest Journey</p>
 								<div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
+								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">Sign Up!</a>
 							</div>
 							<div class="item">
 								<h1>Sign Up</h1>
 								<p>To get started</p>
 								<div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
+								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">Sign Up!</a>
 							</div>
 						</div>
 
