--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -95,7 +95,7 @@
 
 
         	<!-- Begin text carousel intro section -->
-			<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(ttt.jpg);">
+			<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(main.jpg);">
 
 				<div class="container">
 					<div class="caption text-center text-white" data-stellar-ratio="0.7">
