--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -230,7 +230,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-4 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                   <img src="dogs 2.jpg" alt="title"/>
+                                                   <img src="dogs 2.png" alt="title"/>
                                                     <div>
                                                         <a href="#">Animal Care</a>
                                                         <span></span>
