--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -239,7 +239,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-4 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <img src="rich.jpg" alt="title"/>
+                                                    <img src="old.jpg" alt="title"/>
                                                     <div>
                                                         <a href="#">Elderly Services</a>
                                                         <span></span>
